Final code clean and check. Everything works according to kravspec (except paging but patrik is okay with that).

--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -1,5 +1,5 @@
-@*@model IEnumerable<Vehicle>*@
-@model VehiclePagerViewModel
+@*@model VehiclePagerViewModel*@
+@model IEnumerable<Vehicle>
 
 <div class="container">
     <form asp-controller="Vehicle" asp-action="Index" method="post">
@@ -132,7 +132,7 @@
 
     @* Div that shows all filtered vehicle results. *@
     <div>
-        @foreach (var v in Model.Vehicles)
+        @foreach (var v in Model)
         {
             <div class="row">
                 <input type="hidden" value="@v.Id" />
@@ -166,7 +166,7 @@
             <br />
         }
     </div>
-    <div class="float-right">
+    @*<div class="float-right">
         <div page-model="@Model.Pager" page-action="Index"
              enable-page-classes="true"
              page-class="btn"
@@ -176,6 +176,6 @@
         </div>
     </div>
     <br />
-    <br />
+    <br />*@
 
 </div>
